Migration widget spacing fixes

--- a/less/plugins/ecommerce/ecommerce-product-list.less
+++ b/less/plugins/ecommerce/ecommerce-product-list.less
@@ -52,6 +52,12 @@
 		margin: 0 auto;
 		margin-bottom: 2em;
 
+        .edit & {
+            @media only screen and (min-width: 1000px) {
+                width: 90%;
+            }
+        }
+
 		@media (max-width: 1024px) {
 			display: block;
 		}
