--- a/migration/migration.less
+++ b/migration/migration.less
@@ -52,9 +52,32 @@
 #migrated {
 
     // Replaces main padding by moving this to the first widget in the zone
-    &.edit #page-zones__main-overlay + .widget:not([data-name="row"]),
-    #page-zones__main > .widget:not([data-name="row"]):first-child {
-        margin-top: 2em;           // Main padding top
+    &.edit #page-zones__main-overlay + .widget:not([data-name="row"]) {
+        margin-top: 0;           // Main padding top
+    }
+
+    // Remove spacing from certain widgets not inside rows
+    #page-zones__main > .widget {
+        &:not([data-name="row"]),
+        &:not([data-name="responsiveslideshow"]),
+        &:not([data-widget-type="responsiveslideshow"]),
+        &:not([data-name="youtube"]),
+        &:not([data-name="map"]),
+        &:not([data-name="youtube"]),
+        &:not([data-name="gallery"]),
+        &:not([data-name="blogpost"]),
+        &:not([data-widget-type="blogpost"]),
+        &:not([data-name="blogpostlist"]),
+        &:not([data-name="ecomproductslist"]),
+        &:not([data-name="ecomfeaturedproducts"]),
+        &:not([data-name="ecompr)oduct"]),
+        &:not([data-name="line"]),
+        &:not([data-name="image"]),
+        &:not([data-name="row"]) {
+            &:first-child {
+                margin-top: 2em;
+            }
+        }
     }
 
     // Add spacing to the top of a widget when it follows a row
